Migrate use of boxed primitive constructors (#12)